update Dashboard Account

--- a/src/components/SiderMenu/index.less
+++ b/src/components/SiderMenu/index.less
@@ -17,10 +17,9 @@
     color: white;
     display: inline-block;
     vertical-align: middle;
-    font-size: 20px;
-    margin: 0 0 0 12px;
+    margin: 3px 0 0 10px;
     font-family: 'Myriad Pro', 'Helvetica Neue', Arial, Helvetica, sans-serif;
-    font-weight: 600;
+    font-weight: 400;
   }
 }
 
