--- a/src/index.less
+++ b/src/index.less
@@ -1,6 +1,8 @@
 html,
 body,
 :global(#root) {
+  font-family: PingFang SC, Hiragino Sans GB, Microsoft YaHei, Helvetica Neue, Helvetica, Arial,
+    sans-serif;
   height: 100%;
 }
 
@@ -20,7 +22,7 @@ body {
 
 .globalSpin {
   width: 100%;
-  margin: 40px 0 !important;
+  margin: 20% 0 !important;
 }
 
 // temp fix for https://github.com/ant-design/ant-design/commit/a1fafb5b727b62cb0be29ce6e9eca8f579d4f8b7
